# Psi

./: .gitignore  CMakeLists.txt  README.md  config.in.h
cmake_files/: AddCatchTest.cmake  AddExample.cmake  AddRegression.cmake  CheckCXX11Features.cmake  FindBLACS.cmake  FindCatch.cmake  FindMKL.cmake  FindScalapack.cmake  Findspdlog.cmake  LookUpPsi.cmake  PsiConfig.in.cmake  PsiConfigVersion.in.cmake  compilations.cmake  dependencies.cmake  export_psi.cmake  spdlogConfig.cmake
cpp/: CMakeLists.txt
cpp/benchmarks/: CMakeLists.txt  conjugate_gradient.cc  l1_proximal.cc  wavelets.cc
cpp/examples/: CMakeLists.txt  conjugate_gradient.cc  l1_norm.cc  l1_proximal.cc  l21_proximal.cc  nuclear_proximal.cc  positive_quadrant_projection.cc  power_method.cc  power_method_wideband.cc  soft_threshhold.cc  wavelets.cc
cpp/examples/blocking_wideband_primal_dual/: CMakeLists.txt  inpainting.cc  reweighted.cc
cpp/examples/preconditioned_primal_dual/: CMakeLists.txt  inpainting.cc  reweighted.cc
cpp/examples/primal_dual/: CMakeLists.txt  inpainting.cc  reweighted.cc
cpp/examples/time_blocking_primal_dual/: CMakeLists.txt  inpainting.cc  reweighted.cc
cpp/psi/: .power_method.h.swp  CMakeLists.txt  bisection_method.h  chained_operators.h  config.in.h  conjugate_gradient.h  credible_region.h  exception.h  forward_backward.h  forward_backward_nnls.h  io.h  l1_proximal.h  linear_transform.h  linear_transform_operations.h  logging.disabled.h  logging.enabled.h  logging.h  maths.h  positive_quadrant.h  power_method.h  power_method_blocking.h  power_method_wideband.h  preconditioned_primal_dual.h  preconditioned_primal_dual_time_blocking.h  preconditioned_primal_dual_wideband_blocking.h  primal_dual.h  primal_dual_blocking_wideband_serial.h  primal_dual_blocking_wideband_serial2.h  primal_dual_time_blocking.h  primal_dual_wideband_blocking.h  proximal.h  proximal_expression.h  rdiff.bash  real_type.h  relative_variation.h  reweighted.h  reweighted_time_blocking.h  reweighted_wideband.h  sampling.cc  sampling.h  (+8 more)
cpp/psi/mpi/: communicator.cc  communicator.h  decomposition.cc  decomposition.h  scalapack.cc  scalapack.h  types.cc  types.h  utilities.h
cpp/psi/wavelets/: direct.h  indirect.h  innards.impl.h  sara.cc  sara.h  wavelet_data.cc  wavelet_data.h  wavelets.cc  wavelets.h
cpp/tests/: CMakeLists.txt  bisection_method.cc  chained_operators.cc  common_catch_main.cc  common_mpi_catch_main.cc  conjugate_gradient.cc  decomposition.cc  forward_backward.cc  io.cc  linear_transform.cc  maths.cc  mpi.cc  power_method.cc  power_method_blocking.cc  power_method_wideband.cc  preconditioned_primal_dual.cc  primal_dual.cc  proximal.cc  reweighted.cc  sara.cc  scalapack.cc  sort_utils.cc  wavelets.cc  wrapper.cc
cpp/tools_for_tests/: CMakeLists.txt  cdata.h  copy_tiff.cc  directories.in.h  inpainting.h  tiffwrappers.cc  tiffwrappers.h
