add_example(wavelets LIBRARIES psi LABELS wavelets)
add_example(positive_quadrant_projection LIBRARIES psi LABELS proximals)
add_example(l1_norm LIBRARIES psi LABELS proximals)
add_example(soft_threshhold LIBRARIES psi LABELS proximals)
add_example(conjugate_gradient LIBRARIES psi)
add_example(l1_proximal LIBRARIES psi)
add_example(power_method LIBRARIES psi)
add_example(power_method_wideband LIBRARIES psi)
add_example(l21_proximal LIBRARIES psi LABELS proximals)
add_example(nuclear_proximal LIBRARIES psi LABELS proximals)

add_subdirectory(primal_dual)
add_subdirectory(time_blocking_primal_dual)
add_subdirectory(preconditioned_primal_dual)
add_subdirectory(blocking_wideband_primal_dual)
